# AI-book-translator

./: .gitignore  ARCHITECTURE.MD  README.md  debug_metadata.py  project_for_llm.txt  pyproject.toml
DOCS/: REFACTORING_PLAN.md
src/ai_book_translator/: main.py
src/ai_book_translator/config/: settings.py
src/ai_book_translator/domain/: llm_config.py  models.py  schemas.py  translation_checkpoint.py
src/ai_book_translator/infrastructure/io/read_document/: base.py  ocr_pdf_reader.py  pdf_reader.py  text_reader.py
src/ai_book_translator/infrastructure/llm/: base.py  client.py  exceptions.py  json_parser.py  local_provider.py  openai_provider.py  provider_factory.py  types.py
src/ai_book_translator/infrastructure/llm/providers/: ollama_chat_adapter.py  (+1 more)
src/ai_book_translator/infrastructure/persistence/: field_history.py  metadata_cache.py  paths.py  state_store.py  translation_state.py
src/ai_book_translator/services/: chunking.py  connection_service.py  document_service.py  llm_json.py  llm_json_client.py  metadata_service.py  prompt_builders.py  prompts.py  translation_service.py
src/ai_book_translator/ui/: app_window.py
src/ai_book_translator/ui/pages/: book_input_page.py  metadata_page.py  model_setup_page.py  translate_page.py
src/ai_book_translator/ui/widgets/: error_banner.py  progress_widget.py
src/ai_book_translator/ui/workers/: connection_worker.py  metadata_worker.py  translation_worker.py
tests/: test_chunking.py  test_connection_service_integration.py  test_metadata_service.py  test_prompts_new.py  test_read_document.py
